@@ -7,3 +7,4 @@ autoconf --force
 autoheader --force
 automake --add-missing --copy --force-missing --foreign
 glib-gettextize --force --copy
+intltoolize --copy --force --automake
