@@ -2,7 +2,7 @@ Source: vagalume
 Section: sound
 Priority: optional
 Maintainer: Alberto Garcia <agarcia@igalia.com>
-Build-Depends: debhelper (>= 4), pkg-config, libgtk2.0-dev, libgstreamer0.10-dev, libcurl4-gnutls-dev, libxml2-dev, libnotify-dev, libdbus-glib-1-dev
+Build-Depends: debhelper (>= 4), pkg-config, libgtk2.0-dev, libgstreamer0.10-dev, libcurl4-gnutls-dev, libxml2-dev, libnotify-dev, libdbus-glib-1-dev, intltool
 Standards-Version: 3.8.0
 Homepage: http://vagalume.igalia.com/
 
