@@ -2,7 +2,7 @@ Source: vagalume
 Section: user/multimedia
 Priority: optional
 Maintainer: Alberto Garcia <agarcia@igalia.com>
-Build-Depends: debhelper (>= 4), pkg-config, libgstreamer0.10-dev, libcurl3-dev, libxml2-dev, libosso-dev, hildon-fm-dev, libconic0-dev, osso-af-settings
+Build-Depends: debhelper (>= 4), pkg-config, libgstreamer0.10-dev, libcurl3-dev, libxml2-dev, libosso-dev, hildon-fm-dev, libconic0-dev, osso-af-settings, intltool
 Standards-Version: 3.7.3
 
 Package: vagalume
