@@ -1,0 +1,9 @@
+de
+es
+fi
+fr
+gl
+it
+lv
+pt
+pt_BR
